Fix how main page breaks on smaller monitors by altering its sizing and button sizing too

--- a/style.css
+++ b/style.css
@@ -57,13 +57,15 @@ body {
 main {
     width: min(700px, 60vw);
     height: 100%;
+    box-sizing: border-box;
     background-color: #f2f4f5;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
 
     overflow-y: auto;
+
+    padding-top: 6%;
 }
 
 main p {
@@ -107,7 +109,7 @@ form div {
 }
 
 form input {
-    width: min(250px, 40vw);
+    width: min(250px, 25vw);
     height: auto;
     padding: 9px;
     
@@ -115,6 +117,10 @@ form input {
     border-radius: 8px;
     background-color: inherit;
 
+}
+
+form input::placeholder {
+    text-overflow: ellipsis;
 }
 
 input:focus {
@@ -168,7 +174,7 @@ button[type='submit']{
 
     font-family: inherit;
 
-    width: min(250px, 40vw);
+    width: min(250px, 25vw);
 
     transition: background-color 0.4s;
 }
